# voicebot

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.cfg
src/: Bot.py  Setup.py
test/: main.py
test/extentions/: Open_app.py  Wish.py
