[metadata]
name = VoiceBot
version = 0.0.1
author = Hrishikesh
author_email = hrishikesh.vaze01@gmail.com
description = Voice assistant Ezz pzz 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hrishikesh214/voicebot

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src